--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: MCBasic
-version: 1.10.1
-main: me.marbanz.mcbasic.Main
+version: '${project.version}'
+main: me.marbanz.mcbasic.MCBasic
 authors: [ Marbanz ]
 api-version: 1.17
 description: A simple plugin for Minecraft
@@ -179,3 +179,27 @@ commands:
     aliases: [cord]
     permission: mcbasic.coordinates
     usage: "Use: /coordinates [add|remove|list|location]"
+
+  mutelist:
+    description: see the list of muted players
+    aliases: [ ]
+    permission: mcbasic.mutelist
+    usage: "Use: /mutelist"
+
+  tpa:
+    description: teleport a player to another player
+    aliases: [ ]
+    permission: mcbasic.tpa
+    usage: "Use: /tpa <player>"
+
+  tpaccept:
+    description: accept a teleport request
+    aliases: [tpac]
+    permission: mcbasic.tpaccept
+    usage: "Use: /tpaccept <player>"
+
+  tpdeny:
+    description: deny a teleport request
+    aliases: [tpad]
+    permission: mcbasic.tpdeny
+    usage: "Use: /tpdeny <player>"
