--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.marbanz</groupId>
-    <artifactId>MCBasic</artifactId>
-    <version>1.10.1</version>
+    <artifactId>mcbasic</artifactId>
+    <version>1.10.2</version>
     <packaging>jar</packaging>
 
     <name>MCBasic</name>
 
     <description>A simple plugin for Minecraft</description>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>16</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <url>https://www.spigotmc.org/resources/mcbasic.85523/</url>
